	* [WooCommerce](https://wordpress.org/plugins/woocommerce/): Fixed shipping method selection styling on Shopping Cart page.
	* [WooCommerce](https://wordpress.org/plugins/woocommerce/): Fixed deprecated use of `WC_Cart::get_cart_url`.
	* [WPML](http://themeblvd.com/links/wpml): Language switcher is now more accessible across all theme bases on mobile.
	* [WPML](http://themeblvd.com/links/wpml): Fixed WPML options showing on Theme Options, when WPML isn't installed.
* Improvement: There is now a clear separation between the desktop header and the mobile header, and when one is shown, the other is hidden.
* Improvement: Footer design and user options have now been standardized across all theme bases; for all theme bases except Developer, see modified options at *Appearance > Theme Options > Styles > Footer*.
* Improvement: Better handling of background video; instead of just a black screen, the placeholder image will now display as a background image while the video is loading, and continue to show when the video can't be loaded.
* Improvement: Better handling of retrieving FontAwesome icons for admin icon browser for more server setups, along with minor UI fixes.
* Improvement: On all theme bases, if no "Primary Navigation" menu is assigned, menu will not display (previously, only the Agent base behaved like this).
* Improvement: Collapsible widget area locations no longer have the word "Ads" in their titles.
* Improvement: Better consistency and styling with displaying collapsible widget areas.
* Improvement: Selections for "Above Content" and "Below Content" default widget areas now available with Widget Area element of layout builder.
* Improvement: Theme option style presets will now apply corresponding default theme logo to fit selected design, if the user hasn't configured a custom logo of their own.
* Improvement: Admin code editors now use WordPress's implementation of CodeMirror editor with coding help and error hints, introduced in WordPress 4.9.