@@ -102,6 +102,7 @@ Jump Start Changelog
 	* [WooCommerce](https://wordpress.org/plugins/woocommerce/): Fixed shipping method selection styling on Shopping Cart page.
 	* [WooCommerce](https://wordpress.org/plugins/woocommerce/): Fixed deprecated use of `WC_Cart::get_cart_url`.
 	* [WPML](http://themeblvd.com/links/wpml): Language switcher is now more accessible across all theme bases on mobile.
+	* [WPML](http://themeblvd.com/links/wpml): Fixed language switcher not showing with Entrepreneur base, when header top info bar isn't displayed.
 	* [WPML](http://themeblvd.com/links/wpml): Fixed WPML options showing on Theme Options, when WPML isn't installed.
 * Improvement: There is now a clear separation between the desktop header and the mobile header, and when one is shown, the other is hidden.
 * Improvement: Footer design and user options have now been standardized across all theme bases; for all theme bases except Developer, see modified options at *Appearance > Theme Options > Styles > Footer*.
